add refreshtoken and toastr notification

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,13 +1,17 @@
 <app-card>
   <p class="text-center">
-    <img src="assets/icon.png" width="200" alt="DoTo">
+    <img src="assets/icon04.png" width="200" alt="ToDo">
   </p>
-  <h1 class="text-center">Olá! Bem vindo!</h1>
+  <h1 class="text-center">Bem vindo ao ToDo!</h1>
   <br>
   <p class="text-center">
     <app-button (click)="login()">
       <i class="fa fa-google"></i>
-      Entrar com Google
+      Entrar com Google  
     </app-button>
+    <!-- <app-button class="fb-button" (click)="loginFb()">
+      <i class="fa fa-facebook"></i>
+      Entrar com Facebook
+    </app-button>     -->
   </p>
 </app-card>
