--- a/src/app/components/button/button.component.css
+++ b/src/app/components/button/button.component.css
@@ -11,6 +11,7 @@ button {
   cursor: pointer;
   transition-duration: 0.5s;
   min-width: 150px;
+  margin-bottom:15px;
 }
 
 button:hover {
@@ -25,3 +26,4 @@ button[disabled] {
   -webkit-filter: grayscale(90%);
   filter: grayscale(90%);
 }
+
