--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,7 @@
 <div class="container">
+  <!-- <div style="text-align: center;">
+    {{ show | async | json }}
+  </div> -->
   <div class="inner-container">
     <app-user-card></app-user-card>
     <br><br>
@@ -8,6 +11,6 @@
     <br><br>
   </div>
   <div style="text-align: center;font-size: 10px;color: #fa4d73;">
-    <p>Copyright 2020 © Todo - Desenvolvido por P@rmex - build 1.0.2</p>
+    <p>Copyright 2020 © Todo - Desenvolvido por P@rmex - build 1.0.3</p>
   </div>
 </div>
