--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,8 +1,8 @@
 <app-card>
   <p class="text-center">
-    <img src="assets/icon04.png" width="200" alt="ToDo">
+    <img src="assets/icon.png" width="200" alt="ToDo">
   </p>
-  <h1 class="text-center">Bem vindo ao ToDo!</h1>
+  <h1 class="text-center">Let's <span style="color: #fa4d73;">ToDo</span> It!</h1>
   <br>
   <p class="text-center">
     <app-button (click)="login()">
