--- a/src/app/pages/new/new.component.html
+++ b/src/app/pages/new/new.component.html
@@ -7,7 +7,7 @@
   </small>
   <br>
   <h2>Quando?</h2>
-  <input type="datetime-local" formControlName="date">
+  <input type="datetime-local" formControlName="date" (keyup.enter)="keytab($event)" >
   <small class="error" *ngIf="form.controls.date.invalid">
     <strong>Data/Hora inválida</strong>
   </small>
