--- a/src/app/components/todo-list/todo-list.component.css
+++ b/src/app/components/todo-list/todo-list.component.css
@@ -74,3 +74,27 @@ input:focus {
 .error {
   color: #ff0000;
 }
+
+
+.search-all {
+  max-width: 500px;
+  padding-bottom: 5px;
+  margin:auto;  
+}
+
+.form-control-all {
+  background-color: #fff;
+  box-shadow: 0 0px 8px #ff7c7c, 0 0 10px #ffffffeb;
+  font-size: 1.2em;
+  color: rgba(0, 0, 0, 0.6);
+  border-radius: 20px;    
+  border-bottom: 0px;
+  padding-left: 15px;
+}
+
+.form-control-all::placeholder  {
+  font-family: FontAwesome;
+  font-size: 0.8em;
+  padding-left: 5px;
+  color: rgba(0, 0, 0, 0.3); 
+}
