--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 body {
   margin: 0px;
   padding: 0px;
-  background-color: #fafafa;
+  background-color: #f0f0f0;
   font-family: "Poppins", sans-serif;
   display: flex;
   align-items: center;
