--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,16 +1,13 @@
 <div class="container">
-  <!-- <div style="text-align: center;">
-    {{ show | async | json }}
-  </div> -->
   <div class="inner-container">
     <app-user-card></app-user-card>
-    <br><br>
+    <br><br><br>
     <app-tabs></app-tabs>
     <br>
     <router-outlet></router-outlet>
     <br><br>
   </div>
-  <div style="text-align: center;font-size: 10px;color: #fa4d73;">
-    <p>Copyright 2020 © Todo - Desenvolvido por P@rmex - build 1.0.3</p>
+  <div style="text-align: center;font-size: 11px;columns: #000000;">
+    <p>Copyright 2020 © Todo - Desenvolvido por <a href="https://www.parmex.com.br">P@rmex</a> - build 1.0.5</p>
   </div>
 </div>
