--- a/src/app/components/todo-list/todo-list.component.html
+++ b/src/app/components/todo-list/todo-list.component.html
@@ -1,8 +1,8 @@
 <div *ngIf="cardAll" class="search-all">
-  <input class="form-control-all" type="text" name="search" [(ngModel)]="searchText" autocomplete="off" placeholder="&#61442;  Pesquisar...">
+  <input class="form-control-all" type="text" name="search" [(ngModel)]="searchText" autocomplete="on" placeholder="&#61442;  Pesquisar...">  
 </div>
 <ul class="todos" *ngIf="todos">
-  <li *ngFor="let todo of todos | filter:searchText">
+  <li *ngFor="let todo of todos | filter:searchText | angularPaginator: { currentPage: currentPage }; let i = index">
     <div *ngIf="!todo.done">
       <a class="remove-item" (click)="openModal('custom-modal-1', todo)"><i class="fa fa-edit"></i></a>
     </div>
@@ -55,6 +55,20 @@
       </form>
     </jw-modal>
     <!--  -->
-
   </li>
 </ul>
+
+<div class="pagination" *ngIf="!searchText" style="margin: 0 auto;width: 50%;">
+  <angular-paginator className="pagination" (pageChange)="currentPage = $event"
+    firstText="Primeiro"
+    previousText="Anterior"
+    nextText="Próximo"
+    lastText="Último"
+    [autoHide]="true"
+    [maxSize]="7"
+    [boundaryLinkNumbers]="true"
+    size="sm" >
+  </angular-paginator>
+</div>
+
+
